# YeaZ-tracer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
example/: colony005_segmentation.h5
src/bread/algo/lineage/: __init__.py  _lineage.py  _validation.py
src/bread/algo/lineage/XGBoost/: best_model_for_matrix_data_10_features.json  requirements.txt
src/bread/algo/lineage/nn/: NOTE.txt  __init__.py  _data.py  _extraction.py  _kfold.py  _lineage.py  _model.py  preprocess.py  train.py
src/bread/algo/lineage/saved_models/: best_model_thresh12_frame_num8_normalized_False.pth  best_model_thresh8_frame_num8_normalized_False.pth  best_model_with_fake_candid_thresh12_frame_num8_normalized_False.pth  best_model_with_fake_candid_thresh12_frame_num8_normalized_False_with_tracking_errors.pth  best_model_with_fake_candid_thresh12_frame_num8_normalized_True.pth  model_nn_16.pth  (+4 more)
src/bread/cli/: __init__.py  __main__.py  _cli.py
src/bread/data/: __init__.py  _data.py  _exception.py  _features.py  _utils.py
src/bread/gui/: __main__.py  _dialogs.py  _editor.py  _gui.py  _state.py  _utils.py  _viewer.py  _wizards.py
src/bread/tests/: Age_related_tests.ipynb  check_errors.ipynb  convert_external_data.ipynb  features_evaluation_nn.ipynb  k_fold_CV_test_XGboost.ipynb  k_fold_cv_test_nn.ipynb  make_candidate_features.ipynb  model_all_colonies.json  model_xgboost.py  nearest_cell_test.ipynb  new_features_xgboost.ipynb  nn_model.py  normalization_test.ipynb  threshold_test.ipynb  train_ml.ipynb  train_nn.ipynb  utils.py
src/bread/vis/: __init__.py  _vis.py
(+13 files in other folders)
