[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bread"
version = "1.0.0"
description = "A package to deal with microscopical images of yeast images"
readme = "README.md"
license = { file = "LICENSE" }

keywords = ["yeast", "lineage tracing", "cell tracking"]

requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.5",
    "scipy>=1.7.3",
    "opencv-python==4.5.5.64",
    "pandas>=1.3.5",
    "tifffile",
    "h5py>=3.6.0",
    "PySide6==6.2.4",
    "pyqtgraph>=0.12.4",
    "torch==2.0.0",
    "scikit-learn>=1.0.2",
    "networkx==2.6.3",
    "tqdm",
    "matplotlib>=3.5.3",
    "nd2reader",
    "scikit-image",
]

[project.optional-dependencies]
dev = ["YeaZ", "plotly", "pip-tools", "pytest", "wandb", "munkres", "xgboost", "torch_scatter", "pyg_lib", "torch_sparse", "torch_cluster", "torch_cluster", "torch_geometric==2.2.0", "skorch==0.12.1",]

[project.urls]
Homepage = "https://github.com/rahi-lab/YeaZ-tracer"

[project.scripts]
bread = "bread.cli.__main__:main"

[project.gui-scripts]
bread = "bread.gui.__main__:main"